  and ``false`` in lower case. Other values are not allowed any more and will
  result in a parsing exception.

- Store level throttling settings (``indices.store.throttle.*``) have been
  removed.

- The gateway recovery table setting ``recovery.initial_shards`` has been
  removed. Nodes will recover their unassigned local primary shards
  immediatelly after restart.

Changes
=======

- ``ALTER TABLE <name> OPEN`` will now wait for all shards to become active
  before returning to be consistent with the behaviour of other statements.

- CrateDB is now based on Elasticsearch 6.1.3 and Lucene 7.1.0.

- Added a new ``bengali`` language analyzer and a ``bengali_normalization``
  token filter.

- Added new ``cluster.routing.allocation.disk.watermark.flood_stage`` setting,
  that controls at which disk usage indices should become read-only to prevent
  running out of disk space. There is also a new node check that indicates
  whether the threshold is exceeded.

- Added new tokenizers ``simple_pattern`` and ``simple_pattern_split`` which
  allow to tokenize text for the fulltext index by a regular expression pattern.

- Changed ``BEGIN`` and ``SET SESSION`` to no longer require ``DQL``
  permissions on the ``CLUSTER`` level.

- Implemented a `Ready` node status JMX metric expressing if the node is ready
  for processing SQL statements.

Fixes
=====

- Fixed an Admin-UI issue that caused the translation strings to not be loaded
  correctly.

- Fixed an issue that only occurred in Enterprise Edition, when privileges
  are enabled. This issue would result in an exception about missing
  privileges being thrown, rather than the expected Unsupported Feature
  exception, when attempting operations on closed tables/partitions as a
  user.

- Fixed an issue that caused a ``NullPointerException`` if ``REFRESH TABLE``
  was executed on a table with closed partitions.

- Fixed an issue that caused ``MissingPrivilegeException`` for non-superusers
  for queries with ``UNION ALL``.
