@@ -73,11 +73,11 @@ startup defined configuration file value or to its default value::
 ::
 
     cr> select settings['stats'] from sys.cluster;
-    +--...----------------------------------------------------------------------------------------------------------------------------------------...--+
-    | settings['stats']                                                                                                                                |
-    +--...----------------------------------------------------------------------------------------------------------------------------------------...--+
-    | {... "enabled": false, "jobs_log_expiration": "0s", "jobs_log_size": 2048, "operations_log_expiration": "0s", "operations_log_size": 10000, ...} |
-    +--...----------------------------------------------------------------------------------------------------------------------------------------...--+
+    +--...---------------------------------------------------------------------------------------------------------------------------------------...--+
+    | settings['stats']                                                                                                                               |
+    +--...---------------------------------------------------------------------------------------------------------------------------------------...--+
+    | {... "enabled": true, "jobs_log_expiration": "0s", "jobs_log_size": 2048, "operations_log_expiration": "0s", "operations_log_size": 10000, ...} |
+    +--...---------------------------------------------------------------------------------------------------------------------------------------...--+
     SELECT 1 row in set (... sec)
 
 ``RESET`` can also be done on objects::
@@ -88,9 +88,9 @@ startup defined configuration file value or to its default value::
 ::
 
     cr> select settings['stats'] from sys.cluster;
-    +--...-----------------------------------------------------------------------------------------------------------------------------------------...--+
-    | settings['stats']                                                                                                                                 |
-    +--...-----------------------------------------------------------------------------------------------------------------------------------------...--+
-    | {... "enabled": false, "jobs_log_expiration": "0s", "jobs_log_size": 10000, "operations_log_expiration": "0s", "operations_log_size": 10000, ...} |
-    +--...-----------------------------------------------------------------------------------------------------------------------------------------...--+
+    +--...----------------------------------------------------------------------------------------------------------------------------------------...--+
+    | settings['stats']                                                                                                                                |
+    +--...----------------------------------------------------------------------------------------------------------------------------------------...--+
+    | {... "enabled": true, "jobs_log_expiration": "0s", "jobs_log_size": 10000, "operations_log_expiration": "0s", "operations_log_size": 10000, ...} |
+    +--...----------------------------------------------------------------------------------------------------------------------------------------...--+
     SELECT 1 row in set (... sec)
