@@ -65,7 +65,6 @@ def test_suite():
         port=CRATE_HTTP_PORT,
         transport_port=CRATE_TRANSPORT_PORT,
         settings={
-            'stats.enabled': True,
             'psql.port': CRATE_PSQL_PORT,
             # The disk.watermark settings can be removed once crate-python > 0.21.1 has been released
             "cluster.routing.allocation.disk.watermark.low" : "100k",
