@@ -1,6 +1,5 @@
 cluster.name: dev
 stats.service.interval: 0
-stats.enabled: true
 # bind to localhost, mainly to prevent the node from dying due to bootstrap checks (HEAP checks)
 network.host: _local_
 license.enterprise: true
