@@ -56,7 +56,6 @@ public class PostgresJobsLogsITest extends SQLTransportIntegrationTest {
     @Before
     public void initDriverAndStats() throws Exception {
         try (Connection conn = DriverManager.getConnection(sqlExecutor.jdbcUrl())) {
-            conn.createStatement().execute("set global stats.enabled = true");
             ResultSet rs = conn.createStatement().executeQuery("select stmt from sys.jobs");
             assertTrue("sys.jobs must contain statement", rs.next());
             assertEquals(rs.getString(1), "select stmt from sys.jobs");
@@ -67,8 +66,6 @@ public class PostgresJobsLogsITest extends SQLTransportIntegrationTest {
     public void resetStats() throws Exception {
         try (Connection conn = DriverManager.getConnection(sqlExecutor.jdbcUrl())) {
             conn.createStatement().execute("reset global stats.enabled");
-            ResultSet rs = conn.createStatement().executeQuery("select stmt from sys.jobs");
-            assertFalse("sys.jobs must not contain entries", rs.next());
         }
     }
 
